# pylibsproject

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci_cd.yml
pylibsproject/: __init__.py  decorators.py  item.py  main.py
tests/: test_api.py
