[tool.poetry]
name = "pylibsproject"
version = "0.1.0"
description = "Repo to try convenient python libraries"
authors = ["Blai Melendez Catalan <bmelendez@bmat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
pydantic = "^2.7.0"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
flake8 = "^7.0.0"
black = "^24.4.0"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
